--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,6 @@
 <body>
     <h2>hello this is contact page </h2>
     <a href="index.html">home page</a>
+    please follow me on instagram
 </body>
 </html>
