--- a/index.html
+++ b/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="nk.jpeg">
+    <title>My Website</title>
 </head>
-<body>
-    <h2>hello i am neha this is my website that you are visiting thank you
 
-    </h2>
-    <h3>this is home page</h3>
-    <a href="contact.html">contact page</a>
+<body class="bg-pink-100">
+    <div class="bg-white p-8 m-8">
+        <!-- navbar start here -->
+
+        <nav
+        class=" p-2 w-full h-14 bg-pink-800 text-white flex justify-between px-4 items-center md:px-4 border-spacing-2 rounded-xl">
+        <div text-2xl text-white font-bold>My Website</div>
+        <ul class="md:flex hidden font-semibold">
+            <li class="mx-[10px] cursor-pointer"><a href="index.html">Home</a></li>
+            <li class="mx-[10px] cursor-pointer"><a href="about.html">About</a></li>
+            <li class="mx-[10px] cursor-pointer"><a href="contact.html">contact</a></li>
+        </ul>
+        <div class="md:hidden">
+            <a href="#">&#8801;</a>
+        </div>
+
+    </nav>
+
+
+
+        <!-- navbar ends here -->
+
+        <header class="max-w-screen-sm h-screen">
+
+            <img src="w2.jpg" class="w-full h-full " alt="">
+        </header>
+    </div>
 </body>
+
 </html>
